Add canonical node page JSON endpoint
